--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,9 @@ on:  # yamllint disable-line rule:truthy
           required: false
 jobs:
   csm-release:
-    uses: dell/common-github-actions/.github/workflows/csm-release-driver-module.yaml@feature/release-creator
+    uses: dell/common-github-actions/.github/workflows/csm-release-driver-module.yaml@main
     name: Release CSM Drivers and Modules
     with:
       version: ${{ github.event.inputs.option }}
-    #   images: ${{ github.event.inputs.replicatorCheckInput: == 'true' && 'csi-powermax,csipowermax-reverseproxy' || 'csi-powermax' }}
-      images: "dell-replication-controller"
+      images: ${{ github.event.inputs.controllerCheckInput == 'true' && 'dell-replication-controller' || github.event.inputs.replicatorCheckInput == 'true' && 'dell-csi-replicator' }}
     secrets: inherit
